--- a/client/index.html
+++ b/client/index.html
@@ -54,7 +54,7 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main-step3.tsx"></script>
+    <script type="module" src="/src/main-final.tsx"></script>
     <script
       defer
       src="%VITE_ANALYTICS_ENDPOINT%/umami"
